--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
          <ul>
             <li>20 yrs old</li> 
             <li>lies in Kerala</li>
-            <li>loves to play badmiton</li>
+            <li>loves to play badminton</li>
          </ul>
          <p>Connect with me on <a href="https://www.linkedin.com/in/rohan-mano/">linkdin</a></p>
          <input type="text" placeholder="Enter Email">
